# Auditron

./: .env.example  .gitignore  LICENSE  README.md  architecture.html  pyproject.toml
benchmarks/: conftest.py  test_evasion_dataset.py  test_false_positives.py  test_latency.py
benchmarks/datasets/: benign_prompts.json  malicious_prompts.json
src/agentauditor/: __init__.py  __main__.py
src/agentauditor/cli/: app.py
src/agentauditor/core/: chain_detector.py  enforcer.py  engine.py  evaluator.py  identity.py  models.py  normalizer.py  rate_limiter.py  streaming.py
src/agentauditor/integrations/: openclaw_plugin.py
src/agentauditor/layers/: base.py  execution_layer.py  identity_layer.py  input_layer.py  output_layer.py  tool_layer.py
src/agentauditor/llm_judge/: judge.py  prompts.py
src/agentauditor/logging/: audit_logger.py  exporters.py
src/agentauditor/policies/: loader.py  migrations.py
src/agentauditor/rules/: matchers.py  rule_engine.py
src/agentauditor/server/: mcp_server.py
src/agentauditor/state/: __init__.py  backend.py  memory.py  redis.py
src/agentauditor/testing/: __init__.py  (+2 more)
tests/: conftest.py  test_adversarial.py  test_audit_backends.py  test_audit_logger.py  test_boundary_probing.py  test_chain_detector.py  test_enforcer.py  test_enhanced_chain.py  test_evaluator.py  test_identity_registry.py  test_integration.py  test_llm_judge.py  test_models.py  test_normalizer.py  test_policy_loader.py  test_policy_migrations.py  test_rate_limiter.py  test_react_judge.py  test_rule_engine.py  test_state_backends.py  test_streaming.py
tests/test_layers/: test_execution_layer.py  test_identity_layer.py  test_input_layer.py  test_output_layer.py  test_tool_layer.py
(+9 files in other folders)
